--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "ts-tree-struct",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MRsams/ts-tree-struct"
   },
   "keywords": ["tree", "structure", "ts"],
   "author": "MRsams",
